--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="header__content">
                     <div class="header__logo">
-                        <img src="img/logo.svg">
+                        <img src="img/logo.svg" loading="lazy">
                     </div>
                     <nav class="header__menu menu">
                         <ul class="menu__list">
@@ -57,7 +57,7 @@
                 <div class="about-us__img">
                     <picture>
                         <source srcset="img/about-us-bg.webp" type="webp" />
-                        <img src="img/about-us-bg.jpg" alt="people">
+                        <img src="img/about-us-bg.jpg" alt="people" loading="lazy">
                     </picture>
                 </div>
                 <div class="about-us__bg"></div>
@@ -257,7 +257,7 @@
                                     <div class="card__img">
                                         <picture>
                                             <source srcset="img/brands-1.webp" type="webp" />
-                                            <img src="img/brands-1.png" alt="brand-1">
+                                            <img src="img/brands-1.png" alt="brand-1" loading="lazy">
                                         </picture>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46"
                                             viewBox="0 0 46 46" fill="none">
@@ -286,7 +286,7 @@
                                     <div class="card__img">
                                         <picture>
                                             <source srcset="img/brands-2.webp" type="webp" />
-                                            <img src="img/brands-2.png" alt="brand-2">
+                                            <img src="img/brands-2.png" alt="brand-2" loading="lazy">
                                         </picture>
                                     </div>
                                     <div class="card__info">
@@ -308,7 +308,7 @@
                                     <div class="card__img">
                                         <picture>
                                             <source srcset="img/brands-3.webp" type="webp" />
-                                            <img src="img/brands-3.png" alt="brand-3">
+                                            <img src="img/brands-3.png" alt="brand-3" loading="lazy">
                                         </picture>
                                     </div>
                                     <div class="card__info">
@@ -338,7 +338,7 @@
                             <div class="info">
                                 <div class="info__content">
                                     <div class="info__logo">
-                                        <img src="img/logo-2.svg" alt="">
+                                        <img src="img/logo-2.svg" loading="lazy">
                                     </div>
                                     <h4 class="info__title">About toKen $Cmeta</h4>
                                     <p class="info__about">CMETA, a BSC-based cryptocurrency token will be the sole
