--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                             <li class="menu__item"><a href="#home">Home</a></li>
                             <li class="menu__item"><a href="#about-us">About Us</a></li>
                             <li class="menu__item"><a href="#white-paper">White paper</a></li>
-                            <li class="menu__item"><a href="#tokenomics">Tokenomics</a></li>
-                            <li class="menu__item"><a href="#roadmap">Road Map</a></li>
-                            <li class="menu__item"><a href="">How to buy</a></li>
-                            <li class="menu__item"><a href="">Buy</a></li>
+                            <li class="menu__item"><a href="#">Tokenomics</a></li>
+                            <li class="menu__item"><a href="#">Road Map</a></li>
+                            <li class="menu__item"><a href="#">How to buy</a></li>
+                            <li class="menu__item"><a href="#">Buy</a></li>
                         </ul>
                     </nav>
                     <div class="burger">
