--- a/index.html
+++ b/index.html
@@ -157,12 +157,16 @@
                                     <div class="point-text__list">
                                         <ul>
                                             <li>CMETA Staking Release</li>
-                                            <li>SANKOFA Sidechain DEV Starts ($KOFA)<br>
-                                                <span>·</span> CEX Listings and Marketing <br>
-                                                <span>·</span> Governance Token Launch on SOL ($CMETA)
+                                            <li>SANKOFA Sidechain DEV Starts ($KOFA)
+                                                <ul>
+                                                    <li>CEX Listings and Marketing</li>
+                                                    <li>Governance Token Launch on SOL ($CMETA)</li>
+                                                </ul>
                                             </li>
                                             <li>Bridge BSC, ETH Smart Contracts to Solana Contract<br>
-                                                <span>·</span> Social Media Marketing Pushü
+                                                <ul>
+                                                    <li>Social Media Marketing Pushü</li>
+                                                </ul>
                                             </li>
                                             <li>10K Telegram Members</li>
                                             <li>10K Twitter Followers</li>
@@ -194,12 +198,16 @@
                                         <ul>
                                             <li>Implement In-Game Staking ($KOFA Rewards)</li>
                                             <li>In-Game NFT Released<br>
-                                                <span>·</span> SANKOFA Sidechain on Test Net
+                                                <ul>
+                                                    <li>SANKOFA Sidechain on Test Net</li>
+                                                </ul>
                                             </li>
                                             <li>Fiat On-Ramp Added<br>
-                                                <span>·</span> Gameplay Battle Mode Introduced<br>
-                                                <span>·</span> Marketplace Introduced<br>
-                                                <span>·</span> CEX Listings and Marketing
+                                                <ul>
+                                                    <li>Gameplay Battle Mode Introduced</li>
+                                                    <li>Marketplace Introduced</li>
+                                                    <li>CEX Listings and Marketing</li>
+                                                </ul>
                                             </li>
                                         </ul>
                                     </div>
@@ -226,14 +234,18 @@
                                     </div>
                                     <div class="point-text__list">
                                         <ul>
-                                            <li> Migrate Guardians of Lost Worlds to SANKOFA Sidechain <br>
-                                                <span>·</span> CEX Listings & Marketing<br>
-                                                <span>·</span> Virtual Arts Studio Introduced<br>
-                                                <span>·</span> Mobile Beta Gameplay Revealed<br>
-                                                <span>·</span> CMETA DEX Introduced: FORGE
+                                            <li> Migrate Guardians of Lost Worlds to SANKOFA Sidechain 
+                                                <ul>
+                                                    <li>CEX Listings & Marketing</li>
+                                                    <li>Virtual Arts Studio Introduced</li>
+                                                    <li>Mobile Beta Gameplay Revealed</li>
+                                                    <li>CMETA DEX Introduced: FORGE</li>
+                                                </ul>
                                             </li>
                                             <li>Multi-Network Implementation<br>
-                                                <span>·</span> VR Game Dev Begins
+                                                <ul>
+                                                    <li>VR Game Dev Begins</li>
+                                                </ul>
                                             </li>
                                         </ul>
                                     </div>
