lines witout adapt

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                     </div>
                                     <div class="point-text__list">
                                         <ul>
-                                            <li> Migrate Guardians of Lost Worlds to SANKOFA Sidechain 
+                                            <li> Migrate Guardians of Lost Worlds to SANKOFA Sidechain
                                                 <ul>
                                                     <li>CEX Listings & Marketing</li>
                                                     <li>Virtual Arts Studio Introduced</li>
@@ -355,9 +355,10 @@
                                     <h4 class="info__title">About toKen $Cmeta</h4>
                                     <p class="info__about">CMETA, a BSC-based cryptocurrency token will be the sole
                                         governance token on
-                                        the platform. This means that every single transaction in the Crafty Metaverse space
+                                        the platform. This means that every single transaction in the Crafty Metaverse
+                                        space
                                         will be conducted with the $CMETA token</p>
-                                    <button class="info__btn">Play (Coming Soon)</button>    
+                                    <button class="info__btn">Play (Coming Soon)</button>
                                 </div>
                             </div>
                             <div class="points-resources">
@@ -415,10 +416,80 @@
                             </div>
                         </div>
                         <div class="our-resources__star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 46 46" fill="none">
-                                <path d="M23 0L26.2527 19.7473L46 23L26.2527 26.2527L23 46L19.7473 26.2527L0 23L19.7473 19.7473L23 0Z" fill="white"/>
-                              </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 46 46"
+                                fill="none">
+                                <path
+                                    d="M23 0L26.2527 19.7473L46 23L26.2527 26.2527L23 46L19.7473 26.2527L0 23L19.7473 19.7473L23 0Z"
+                                    fill="white" />
+                            </svg>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section class="tickers">
+                <div class="tickers__first">
+                    <div class="tickers__content">
+                        <p>VR GAME MARKETPLACE</p>
+                        <p>VR GAME MARKETPLACE</p>
+                        <p>VR GAME MARKETPLACE</p>
+                        <p>VR GAME MARKETPLACE</p>
+                        <p>VR GAME MARKETPLACE</p>
+                    </div>
+                    <div class="tickers__first_bg">
+                        <img src="img/line-1.svg" alt="bg">
+                    </div>
+                </div>
+                <div class="tickers__second">
+                    <div class="tickers__content">
+                        <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
+                                viewBox="0 0 55 56" fill="none">
+                                <path
+                                    d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                                    fill="white" />
+                            </svg>
+                        </p>
+                        <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
+                                viewBox="0 0 55 56" fill="none">
+                                <path
+                                    d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                                    fill="white" />
+                            </svg>
+                        </p>
+                        <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
+                                viewBox="0 0 55 56" fill="none">
+                                <path
+                                    d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                                    fill="white" />
+                            </svg>
+                        </p>
+                        <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
+                                viewBox="0 0 55 56" fill="none">
+                                <path
+                                    d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                                    fill="white" />
+                            </svg>
+                        </p>
+                        <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
+                                viewBox="0 0 55 56" fill="none">
+                                <path
+                                    d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                                    fill="white" />
+                            </svg>
+                        </p>
+                        <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
+                                viewBox="0 0 55 56" fill="none">
+                                <path
+                                    d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                                    fill="white" />
+                            </svg>
+                        </p>
+                        <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
+                                viewBox="0 0 55 56" fill="none">
+                                <path
+                                    d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                                    fill="white" />
+                            </svg>
+                        </p>
                     </div>
                 </div>
             </section>
