game with adapt

--- a/index.html
+++ b/index.html
@@ -493,6 +493,47 @@
                     </div>
                 </div>
             </section>
+            <section class="game">
+                <div class="game__logo">
+                    <img src="img/game-logo.png" alt="">
+                </div>
+                <div class="container">
+                    <div class="game__content">
+                        <div class="game__img_one">
+                            <img src="img/game-1.png" alt="">
+                        </div>
+                        <div class="game__info">
+                            <div class="game__info_bg"></div>
+                            <div class="game__star">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 46 46"
+                                    fill="none">
+                                    <path
+                                        d="M23 0L26.2527 19.7473L46 23L26.2527 26.2527L23 46L19.7473 26.2527L0 23L19.7473 19.7473L23 0Z"
+                                        fill="white" />
+                                </svg>
+                            </div>
+                            <div class="game__info_content">
+                                <h2 class="game__title title">
+                                    Game
+                                </h2>
+                                <p class="game__text">
+                                    The space will also offer avid gamers to be a part of an
+                                    amazing 3D gaming experience (details to be published soon).
+                                    <br><br>
+                                    Crafty Metaverse space will continuously evolve its 3D gaming space to
+                                    include technologies such as VR headsets, augmented reality glasses, and
+                                    game consoles.
+                                </p>
+                                <button class="game__btn">Invest Now</button>
+
+                            </div>
+                        </div>
+                        <div class="game__img_two">
+                            <img src="img/game-2.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
         <footer class="footer">
 
