explore-and-virtual without adapt

--- a/index.html
+++ b/index.html
@@ -534,6 +534,78 @@
                     </div>
                 </div>
             </section>
+            <section class="explore-and-virtual">
+                <div class="explore-and-virtual__blur"></div>
+                <div class="container">
+                    <div class="explore-and-virtual__content">
+                        <div class="explore">
+                            <div class="explore__blur"></div>
+                            <div class="explore__content">
+                                <div class="explore__text">
+                                    <h2 class="explore__title title">
+                                        Explore Now
+                                    </h2>
+                                    <p class="explore__info">
+                                        Each human will control his/her own digital identity in the Crafty
+                                        Metaverse space.
+                                    </p>
+                                    <button class="explore__btn">
+                                        Invest Now
+                                    </button>
+                                </div>
+                                <div class="explore__text">
+                                    <p class="explore__info">
+                                        A virtual marketplace to allow the users to trade and stake our $CMETA token and
+                                        their NFTs. Negotiate with the digital avatars of other users to sell your NFTs
+                                        at the best prices and generate passive income while playing.
+                                    </p>
+                                </div>
+                                <div class="explore__star">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 46 46"
+                                        fill="none">
+                                        <path
+                                            d="M23 0L26.2527 19.7473L46 23L26.2527 26.2527L23 46L19.7473 26.2527L0 23L19.7473 19.7473L23 0Z"
+                                            fill="white" />
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="explore__img">
+                                <img src="img/explore-now.png" alt="">
+                            </div>
+                        </div>
+                        <div class="virtual">
+                            <div class="virtual__img">
+                                <img src="img/virtual-atrs.png" alt="">
+                            </div>
+                            <div class="virtual__blur"></div>
+                            <div class="virtual__content">
+                                <div class="virtual__text">
+                                    <h2 class="virtual__title title">
+                                        Virtual Arts Studio
+                                    </h2>
+                                    <button class="virtual__btn">
+                                        Create
+                                    </button>
+                                </div>
+                                <div class="virtual__text">
+                                    <p class="virtual__info">
+                                        Virtual Arts Studio where you can enhance your creativity by creating digital
+                                        arts inspired by your game
+                                    </p>
+                                </div>
+                                <div class="virtual__star">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 46 46"
+                                        fill="none">
+                                        <path
+                                            d="M23 0L26.2527 19.7473L46 23L26.2527 26.2527L23 46L19.7473 26.2527L0 23L19.7473 19.7473L23 0Z"
+                                            fill="white" />
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
         <footer class="footer">
 
