our-team with adapt

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                         <ul class="menu__list">
                             <li class="menu__item"><a href="#home">Home</a></li>
                             <li class="menu__item"><a href="#about-us">About Us</a></li>
-                            <li class="menu__item"><a href="#white-paper">White paper</a></li>
-                            <li class="menu__item"><a href="#">Tokenomics</a></li>
-                            <li class="menu__item"><a href="#">Road Map</a></li>
+                            <li class="menu__item"><a href="#team">White paper</a></li>
+                            <li class="menu__item"><a href="#game">Tokenomics</a></li>
+                            <li class="menu__item"><a href="#roadmap">Road Map</a></li>
                             <li class="menu__item"><a href="#">How to buy</a></li>
-                            <li class="menu__item"><a href="#">Buy</a></li>
+                            <li class="menu__item"><a href="#explore">Buy</a></li>
                         </ul>
                     </nav>
                     <div class="burger">
@@ -255,7 +255,7 @@
                     </div>
                 </div>
             </section>
-            <section class="our-brands">
+            <section class="our-brands" id="brads">
                 <div class="our-brands__lines"></div>
                 <div class="container">
                     <div class="our-brands__content">
@@ -338,7 +338,7 @@
                     </div>
                 </div>
             </section>
-            <section class="our-resources">
+            <section class="our-resources" id="resources">
                 <div class="our-resources__blur"></div>
                 <div class="container">
                     <div class="our-resources__content">
@@ -493,7 +493,7 @@
                     </div>
                 </div>
             </section>
-            <section class="game">
+            <section class="game" id="game">
                 <div class="game__logo">
                     <img src="img/game-logo.png" alt="">
                 </div>
@@ -534,7 +534,7 @@
                     </div>
                 </div>
             </section>
-            <section class="explore-and-virtual">
+            <section class="explore-and-virtual" id="explore">
                 <div class="explore-and-virtual__blur"></div>
                 <div class="container">
                     <div class="explore-and-virtual__content">
@@ -560,6 +560,30 @@
                                         at the best prices and generate passive income while playing.
                                     </p>
                                 </div>
+                                <div class="explore__star">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 46 46"
+                                        fill="none">
+                                        <path
+                                            d="M23 0L26.2527 19.7473L46 23L26.2527 26.2527L23 46L19.7473 26.2527L0 23L19.7473 19.7473L23 0Z"
+                                            fill="white" />
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="explore__content_adapt">
+                                <h2 class="explore__title title">
+                                    Explore Now
+                                </h2>
+                                <p class="explore__info">
+                                    Each human will control his/her own digital identity in the Crafty
+                                    Metaverse space.
+                                    <br><br>
+                                    A virtual marketplace to allow the users to trade and stake our $CMETA token and
+                                    their NFTs. Negotiate with the digital avatars of other users to sell your NFTs
+                                    at the best prices and generate passive income while playing.
+                                </p>
+                                <button class="explore__btn">
+                                    Invest Now
+                                </button>
                                 <div class="explore__star">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 46 46"
                                         fill="none">
@@ -602,10 +626,192 @@
                                     </svg>
                                 </div>
                             </div>
+                            <div class="virtual__content_adapt">
+                                <h2 class="virtual__title title">
+                                    Virtual Arts Studio
+                                </h2>
+                                <p class="virtual__info">
+                                    Virtual Arts Studio where you can enhance your creativity by creating digital
+                                    arts inspired by your game
+                                </p>
+                                <button class="virtual__btn">
+                                    Create
+                                </button>
+                                <div class="virtual__star">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 46 46"
+                                        fill="none">
+                                        <path
+                                            d="M23 0L26.2527 19.7473L46 23L26.2527 26.2527L23 46L19.7473 26.2527L0 23L19.7473 19.7473L23 0Z"
+                                            fill="white" />
+                                    </svg>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </section>
+            <section class="our-team" id="team">
+                <div class="our-team__lines"></div>
+                <div class="our-team__dots">
+                    <img src="img/our-team-dots.svg">
+                </div>
+                <div class="container">
+                    <div class="our-team__content">
+                        <div class="our-team__head">
+                            <h3 class="our-team__subtitle subtitle">WHO WE ARE</h3>
+                            <h2 class="our-team__title title">Our Team</h2>
+                        </div>
+                        <div class="our-team__all">
+                            <div class="our-team__member first member active">
+                                <div class="member__img">
+                                    <img src="img/stan.png" alt="">
+                                </div>
+                                <div class="member__info">
+                                    <p class="member__job">CTO/Creative Director</p>
+                                    <p class="member__name">Stan</p>
+                                    <div class="member__social">
+                                        <div class="facebook">
+                                            <img src="img/facebook.svg" alt="">
+                                        </div>
+                                        <div class="twitter">
+                                            <img src="img/twitter.svg" alt="">
+                                        </div>
+                                        <div class="inst">
+                                            <img src="img/instagram.svg" alt="">
+                                        </div>
+                                        <div class="in">
+                                            <img src="img/linkedin.svg" alt="">
+                                        </div>
+                                    </div>    
+                                </div>
+                            </div>
+                            <div class="our-team__member second member member__top">
+                                <div class="member__img">
+                                    <img src="img/kwasi.png" alt="">
+                                </div>
+                                <div class="member__info">
+                                    <p class="member__job">Chief Financial Officer</p>
+                                    <p class="member__name">Kwasi</p>
+                                    <div class="member__social">
+                                        <div class="facebook">
+                                            <img src="img/facebook.svg" alt="">
+                                        </div>
+                                        <div class="twitter">
+                                            <img src="img/twitter.svg" alt="">
+                                        </div>
+                                        <div class="inst">
+                                            <img src="img/instagram.svg" alt="">
+                                        </div>
+                                        <div class="in">
+                                            <img src="img/linkedin.svg" alt="">
+                                        </div>
+                                    </div>    
+                                </div>
+                            </div>
+                            <div class="our-team__member third member">
+                                <div class="member__img">
+                                    <img src="img/kwame.png" alt="">
+                                </div>
+                                <div class="member__info">
+                                    <p class="member__job">COO/Marketing Director</p>
+                                    <p class="member__name">Kwame</p>
+                                    <div class="member__social">
+                                        <div class="facebook">
+                                            <img src="img/facebook.svg" alt="">
+                                        </div>
+                                        <div class="twitter">
+                                            <img src="img/twitter.svg" alt="">
+                                        </div>
+                                        <div class="inst">
+                                            <img src="img/instagram.svg" alt="">
+                                        </div>
+                                        <div class="in">
+                                            <img src="img/linkedin.svg" alt="">
+                                        </div>
+                                    </div>    
+                                </div>
+                            </div>
+                            <div class="our-team__member fourth member member__top">
+                                <div class="member__img">
+                                    <img src="img/kojo.png" alt="">
+                                </div>
+                                <div class="member__info">
+                                    <p class="member__job">CEO/Developer</p>
+                                    <p class="member__name">Kojo</p>
+                                    <div class="member__social">
+                                        <div class="facebook">
+                                            <img src="img/facebook.svg" alt="">
+                                        </div>
+                                        <div class="twitter">
+                                            <img src="img/twitter.svg" alt="">
+                                        </div>
+                                        <div class="inst">
+                                            <img src="img/instagram.svg" alt="">
+                                        </div>
+                                        <div class="in">
+                                            <img src="img/linkedin.svg" alt="">
+                                        </div>
+                                    </div>    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <div class="tickers__second last">
+                <div class="tickers__content">
+                    <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
+                            viewBox="0 0 55 56" fill="none">
+                            <path
+                                d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                                fill="white" />
+                        </svg>
+                    </p>
+                    <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
+                            viewBox="0 0 55 56" fill="none">
+                            <path
+                                d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                                fill="white" />
+                        </svg>
+                    </p>
+                    <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
+                            viewBox="0 0 55 56" fill="none">
+                            <path
+                                d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                                fill="white" />
+                        </svg>
+                    </p>
+                    <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
+                            viewBox="0 0 55 56" fill="none">
+                            <path
+                                d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                                fill="white" />
+                        </svg>
+                    </p>
+                    <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
+                            viewBox="0 0 55 56" fill="none">
+                            <path
+                                d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                                fill="white" />
+                        </svg>
+                    </p>
+                    <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
+                            viewBox="0 0 55 56" fill="none">
+                            <path
+                                d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                                fill="white" />
+                        </svg>
+                    </p>
+                    <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
+                            viewBox="0 0 55 56" fill="none">
+                            <path
+                                d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                                fill="white" />
+                        </svg>
+                    </p>
+                </div>
+            </div>
+
         </div>
         <footer class="footer">
 
